mobile responsive overflow fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -886,6 +886,7 @@ img {
 	.container {
 		margin-left: var(--mb-1);
 		margin-right: var(--mb-1);
+		overflow: hidden;
 	}
 
 	.nav__menu {
